--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,28 @@
 buildscript {
     repositories {
         jcenter()
+        flatDir {
+            dirs '../aars'
+        }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
+        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        flatDir {
+            dirs '../aars'
+        }
     }
 }
 
